Make YCSB work against HBase 0.98.1 on CDH5.1

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
   <!-- Properties Management -->
   <properties>
     <maven.assembly.version>2.2.1</maven.assembly.version>
-    <hbase.version>0.92.1</hbase.version>
+    <hbase.version>0.98.1-hadoop2</hbase.version>
     <accumulo.version>1.6.0</accumulo.version>
     <cassandra.version>0.7.0</cassandra.version>
     <infinispan.version>7.1.0.CR1</infinispan.version>
@@ -61,22 +61,22 @@
 
   <modules>
     <!--module>build-tools</module-->
-    <module>cassandra</module>
+    <!--<module>cassandra</module>-->
     <module>core</module>
     <module>hbase</module>
-    <module>hypertable</module>
-    <module>accumulo</module>
-    <module>dynamodb</module>
-    <module>elasticsearch</module>
+    <!--<module>hypertable</module>-->
+    <!--<module>accumulo</module>-->
+    <!--<module>dynamodb</module>-->
+    <!--<module>elasticsearch</module>-->
     <!--<module>gemfire</module>-->
-    <module>infinispan</module>
+    <!--<module>infinispan</module>-->
     <module>jdbc</module>
-    <module>mapkeeper</module>
-    <module>mongodb</module>
-    <module>orientdb</module>
+    <!--<module>mapkeeper</module>-->
+    <!--<module>mongodb</module>-->
+    <!--<module>orientdb</module>-->
     <!--module>nosqldb</module-->
-    <module>redis</module>
-    <module>voldemort</module>
+    <!--<module>redis</module>-->
+    <!--<module>voldemort</module>-->
     <module>distribution</module>
   </modules>
 
